Connected with backend

--- a/src/app/component/search-engine/search-engine.component.html
+++ b/src/app/component/search-engine/search-engine.component.html
@@ -10,7 +10,7 @@
             <input type="text" name="search" class="search-control" placeholder="Search for stocks" list="list-stock" tabindex="1" autofocus (click)="onSearchClick($event)">
             <img class="search-image" src="assets/searchSymbol.png" alt="search-icon"/>
             <datalist id="list-stock" class="list-stock">
-                <option id="1" class="list-1">Oil & Natural Gas Corporation Limited</option>
+                <option id="1">Oil & Natural Gas Corporation Limited</option>
                 <option id="2">Oil India Limited</option>
                 <option id="3">Oil Country Tubular Limited</option>
                 <option id="4">Dalmia Bharat Limited</option>
